--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -670,7 +670,7 @@
                 // Try to verify with backend API (if available)
                 // Note: This endpoint needs to be created in Cloudflare Workers
                 try {
-                    const response = await fetch('/api/user-permissions', {
+                    const response = await fetch('https://segmentor.jaime-f57.workers.dev/api/user-permissions', {
                         credentials: 'include',
                         headers: {
                             'Accept': 'application/json'
