Update redirect message: 'redirecting to segmentor'

--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -549,7 +549,7 @@
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="margin-right: 8px; vertical-align: middle;">
                     <path d="M16.667 5L7.5 14.167 3.333 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                Successfully signed in! Redirecting to tool...
+                Successfully signed in! Redirecting to segmentor...
             </div>
             <div id="authError" class="auth-error" style="display: none;">
                 Authentication failed. Please try again.
