--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -689,7 +689,7 @@
                 // Try to verify with backend API
                 try {
                     const response = await fetch('https://segmentor.jaime-f57.workers.dev/api/user-permissions', {
-                        credentials: 'include',
+                        // No credentials needed - using localStorage JWT
                         headers: {
                             'Accept': 'application/json',
                             'X-User-Email': userEmail || '' // Pass email if we extracted it
