Update About page: clarify cookie policy - no tracking cookies, minimal auth cookie for Brand+ users

--- a/public/about.html
+++ b/public/about.html
@@ -653,9 +653,9 @@
                                     <path d="m9 9 6 6"/>
                                 </g>
                             </svg>
-                            No Cookies
+                            No Tracking Cookies
                         </h3>
-                        <p>We don't use cookies or any tracking technology. Your privacy is protected by design.</p>
+                        <p>We don't use tracking cookies or any tracking technology. Free users enjoy completely cookie-free browsing. Brand+ users only require a one-time authentication cookie during initial login, which is immediately moved to local storage—no cookies needed afterward. Your privacy is protected by design.</p>
                     </div>
                     <div class="privacy-feature">
                         <h3>
