--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -877,6 +877,19 @@
     detectCurrency();
 </script>
 
+    <!-- Footer (Shared Component) -->
+    <footer class="site-footer">
+        <div class="app-content">
+            <div class="footer-content">
+                <p>&copy; 2025 segmentor.app. All rights reserved.</p>
+                <nav class="footer-nav">
+                    <a href="/privacy.html">Privacy Policy</a>
+                    <a href="/terms.html">Terms of Service</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
 
