Update FAQ docs, fix About page, and update components

--- a/public/faq.html
+++ b/public/faq.html
@@ -433,11 +433,10 @@
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p><strong>NPS* and segmentor.app complement each other perfectly.</strong></p>
-                            <p><strong>NPS gives you a single score and asks, 'Would you recommend us?'</strong></p>
+                            <p><strong>Traditional recommendation scores and segmentor.app complement each other perfectly.</strong></p>
+                            <p><strong>Recommendation scores give you a single metric asking, 'Would you recommend us?'</strong></p>
                             <p><strong>Segmentor.app adds context by showing why customers behave that way—plotting them across satisfaction and loyalty.</strong></p>
-                            <p><strong>Great news:</strong> If you already use NPS, you can use those scores as your loyalty metric in segmentor.app! Many of our users do exactly that. NPS tells you the score; we help you understand the segments behind it.</p>
-                            <p><small>*Net Promoter®, NPS®, NPS Prism®, and the NPS-related emoticons are registered trademarks of Bain & Company, Inc., NICE Systems, Inc., and Fred Reichheld. Net Promoter ScoreSM and Net Promoter SystemSM are service marks of Bain & Company, Inc., NICE Systems, Inc., and Fred Reichheld.</small></p>
+                            <p><strong>Great news:</strong> If you already collect recommendation scores, you can use those as your loyalty metric in segmentor.app! Many of our users do exactly that. Recommendation scores tell you the number; we help you understand the segments behind it.</p>
                         </div>
                     </div>
 
