--- a/public/tool/faq.html
+++ b/public/tool/faq.html
@@ -673,7 +673,7 @@ Jane Doe,2,3,jane@example.com,Canada</pre>
                             <span class="faq-icon">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p><strong>Net Promoter Score (NPS) measures one dimension; the Apostles Model measures two.</strong> This gives you a much richer understanding of your customers.</p>
+                            <p><strong>Traditional recommendation scores measure one dimension; the Apostles Model measures two.</strong> This gives you a much richer understanding of your customers.</p>
                             
                             <p><strong>NPS tells you:</strong></p>
                             <ul>
