--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -516,9 +516,9 @@
       </a>
     </div>
     <div class="nav-links">
-      <a href="/" class="nav-link">Home</a>
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
+      <a href="/contact.html" class="nav-link">Contact</a>
       <a href="/tool/" class="nav-link nav-link-primary">Use Tool</a>
     </div>
   </div>
