--- a/public/contact.html
+++ b/public/contact.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Jaro&display=swap');
+
 .main-navigation {
   background: #fff;
   border-bottom: 1px solid #e5e7eb;
@@ -20,9 +22,38 @@
   padding: 0 1rem;
 }
 
-.nav-logo img {
-  height: 40px;
-  width: auto;
+.nav-logo {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.logo-text {
+  text-decoration: none;
+  display: flex;
+  align-items: baseline;
+  gap: 0;
+  color: #333333;
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
+
+.logo-segmentor {
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-weight: 700;
+  color: #333333;
+}
+
+.logo-m {
+  color: #3a863e;
+}
+
+.logo-app {
+  font-family: 'Jaro', 'Montserrat', sans-serif;
+  color: #3a863e;
+  text-transform: uppercase;
+  font-size: 0.6em;
+  transform: translateY(2px);
+  display: inline-block;
+  margin-left: 2px;
 }
 
 .nav-links {
@@ -62,6 +93,29 @@
   .nav-links {
     gap: 1rem;
   }
+}
+</style>
+<style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
 }
 </style>
     <meta charset="UTF-8">
@@ -159,8 +213,8 @@
 <nav class="main-navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <a href="/">
-        <img src="/segmentor-logo.png" alt="Segmentor" onerror="this.src='/icons/segmentor-logo.png'; this.onerror=null;" />
+      <a href="/" class="logo-text">
+        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
       </a>
     </div>
     <div class="nav-links">
@@ -171,6 +225,9 @@
     </div>
   </div>
 </nav>
+
+
+
 
     <!-- Cross-Browser Compatibility & Reset Styles -->
     <style>
