Fix: Remove font fallbacks from logo styling to match brand guide exactly (Montserrat and Jaro only)

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
   align-items: baseline;
   gap: 0;
   color: #333333;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .logo-segmentor {
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   color: #333333;
 }
@@ -47,7 +47,7 @@
 }
 
 .logo-app {
-  font-family: 'Jaro', 'Montserrat', sans-serif;
+  font-family: 'Jaro', sans-serif;
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
@@ -95,6 +95,7 @@
   }
 }
 </style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>segmentor.app - Professional Customer Segmentation Tool</title>
@@ -178,6 +179,9 @@
     </div>
   </div>
 </nav>
+
+
+
 
     <div class="redirect-container">
         <div class="logo">
