Fix: Use local Montserrat font with @font-face, ensure proper CSS order (@import before @font-face)

--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Jaro&display=swap');
+/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
+@import url('https://fonts.googleapis.com/css2?family=Jaro&display=swap');
+
+/* Font Face Declarations - Using Local Fonts */
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
 .main-navigation {
   background: #fff;
@@ -94,7 +104,159 @@
     gap: 1rem;
   }
 }
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+/* Jaro font - using Google Fonts (we'll add local file if you have it) */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
+}
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
+}
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+/* Fallback: If local fonts fail, use Google Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
+}
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+/* Fallback: If local fonts fail, use Google Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
+}
 </style>
+
 
 <style>
 
@@ -166,6 +328,21 @@
     </div>
   </div>
 </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
