Fix: Add font preload for Montserrat, ensure proper CSS order, use local Montserrat font

--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="preload" href="/fonts/Montserrat-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+
 <style>
 /* Import Google Fonts FIRST (CSS rule: @import must be at top) */
 @import url('https://fonts.googleapis.com/css2?family=Jaro&display=swap');
@@ -103,6 +105,43 @@
   .nav-links {
     gap: 1rem;
   }
+}
+
+
+/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
 }
 
 
@@ -740,6 +779,9 @@
     </div>
   </div>
 </nav>
+
+
+
 
 
 
