Fix: Download and use local Jaro font file, update CSP to allow Google Fonts, add font preload for both fonts

--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -4,14 +4,19 @@
 <link rel="preload" href="/fonts/Montserrat-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 
 <style>
-/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
-@import url('https://fonts.googleapis.com/css2?family=Jaro&display=swap');
-
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
   font-family: 'Montserrat';
   src: url('/fonts/Montserrat-Bold.ttf') format('truetype');
   font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Jaro';
+  src: url('/fonts/Jaro-Regular.ttf') format('truetype');
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
@@ -105,6 +110,79 @@
   .nav-links {
     gap: 1rem;
   }
+}
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
+}
+
+
+/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
 }
 
 
@@ -779,6 +857,12 @@
     </div>
   </div>
 </nav>
+
+
+
+
+
+
 
 
 
