Fix: Always add both font preload links (Montserrat and Jaro) for faster font loading

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -149,6 +149,78 @@
 }
 
 
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
+}
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
+}
+
+
 /* Import Google Fonts FIRST (CSS rule: @import must be at top) */
 
 
@@ -335,6 +407,12 @@
     </div>
   </div>
 </nav>
+
+
+
+
+
+
 
 
 
