Fix: Ensure both font preload links (Montserrat and Jaro) are always added

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <link rel="preload" href="/fonts/Montserrat-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+<link rel="preload" href="/fonts/Jaro-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+
+
 
 <style>
 /* Font Face Declarations - Using Local Fonts */
@@ -110,6 +113,42 @@
   .nav-links {
     gap: 1rem;
   }
+}
+
+
+/* Font Face Declarations - Using Local Fonts */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  
+  
+  
 }
 
 
@@ -530,6 +569,9 @@
     </div>
   </div>
 </nav>
+
+
+
 
 
 
