--- a/public/about.html
+++ b/public/about.html
@@ -6,6 +6,7 @@
 
 
 
+
 <style>
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
@@ -71,7 +72,7 @@
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
-  transform: translateY(2px);
+  vertical-align: baseline;
   display: inline-block;
   margin-left: 2px;
 }
@@ -116,342 +117,8 @@
 }
 
 
-/* Font Face Declarations - Using Local Fonts */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-/* Jaro font - using Google Fonts (we'll add local file if you have it) */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-/* Fallback: If local fonts fail, use Google Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-      
-      html {
+html {
         -webkit-text-size-adjust: 100%;
         -ms-text-size-adjust: 100%;
         text-size-adjust: 100%;
@@ -857,7 +524,4 @@
     </script>
 </body>
 </html>
-
-
-
 
