--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,13 @@
 
 
 
-<style>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>segmentor.app - Professional Customer Segmentation Tool</title>
+    <meta http-equiv="refresh" content="0; url=/tool/">
+    <link rel="canonical" href="https://segmentor.app/tool/" />
+    <style>
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
   font-family: 'Montserrat';
@@ -71,7 +77,7 @@
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
-  transform: translateY(2px);
+  vertical-align: baseline;
   display: inline-block;
   margin-left: 2px;
 }
@@ -116,382 +122,7 @@
 }
 
 
-/* Font Face Declarations - Using Local Fonts */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-/* Jaro font - using Google Fonts (we'll add local file if you have it) */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-/* Fallback: If local fonts fail, use Google Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-/* Fallback: If local fonts fail, use Google Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-</style>
-
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>segmentor.app - Professional Customer Segmentation Tool</title>
-    <meta http-equiv="refresh" content="0; url=/tool/">
-    <link rel="canonical" href="https://segmentor.app/tool/" />
-    <style>
         * {
             margin: 0;
             padding: 0;
@@ -569,41 +200,6 @@
     </div>
   </div>
 </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <div class="redirect-container">
