--- a/public/privacy.html
+++ b/public/privacy.html
@@ -6,6 +6,7 @@
 
 
 
+
 <style>
 /* Font Face Declarations - Using Local Fonts */
 @font-face {
@@ -71,7 +72,7 @@
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
-  transform: translateY(2px);
+  vertical-align: baseline;
   display: inline-block;
   margin-left: 2px;
 }
@@ -116,302 +117,8 @@
 }
 
 
-/* Font Face Declarations - Using Local Fonts */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Import Google Fonts FIRST (CSS rule: @import must be at top) */
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-/* Jaro font - using Google Fonts (we'll add local file if you have it) */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  
-  
-  
-}
-
-
-/* Font Face Declarations - Using Local Fonts */
-
-
-
-        .policy-content p {
+.policy-content p {
             margin-bottom: 1rem;
             color: #374151;
         }
@@ -447,43 +154,6 @@
   </div>
 </nav>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
 
     <main class="policy-content">
         <h1>Privacy Policy</h1>
