Make build process cross-platform and fix static page structure
- Add cross-env for cross-platform CI=false environment variable
- Create deploy-prepare.js script using Node.js (replaces Unix shell commands)
- Fix missing body tags in about.html, faq.html, and contact.html
- Ensure navigation is properly injected into all static pages
- All build scripts now work on Windows, Mac, and Linux

--- a/public/contact.html
+++ b/public/contact.html
@@ -422,20 +422,24 @@
     </script>
 </head>
 <body>
-    <!-- Qualtrics Site Intercept Target Div -->
-    <div id="ZN_11X8CuCOswXGKnC"></div>
-    
-    <!-- Qualtrics Site Intercept Deployment Script -->
-    <script type="text/javascript">
-        (function() {
-            var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://zn11x8cucoswxgknc-teresamonroesandbox.siteintercept.qualtrics.com/SIE/";
-            if(!gi.call(d,id)) {
-                js=ce.call(d,"script"); js.id=id; js.type="text/javascript"; js.async=true;
-                js.src=b+"?Q_ZID=ZN_11X8CuCOswXGKnC";
-                q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q)
-            }
-        })();
-    </script>
+
+<nav class="main-navigation">
+  <div class="nav-container">
+    <div class="nav-logo">
+      <a href="/" class="logo-text">
+        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
+      </a>
+    </div>
+    <div class="nav-links">
+      <a href="/about.html" class="nav-link">About</a>
+      <a href="/faq.html" class="nav-link">FAQ</a>
+      <a href="/contact.html" class="nav-link">Contact</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Use Tool</a>
+    </div>
+  </div>
+</nav>
+
+
 </body>
 </html>
 
