--- a/public/faq.html
+++ b/public/faq.html
@@ -491,5 +491,25 @@
             searchResults.style.display = 'none';
         }
     </script>
+</head>
+<body>
+
+<nav class="main-navigation">
+  <div class="nav-container">
+    <div class="nav-logo">
+      <a href="/" class="logo-text">
+        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
+      </a>
+    </div>
+    <div class="nav-links">
+      <a href="/about.html" class="nav-link">About</a>
+      <a href="/faq.html" class="nav-link">FAQ</a>
+      <a href="/contact.html" class="nav-link">Contact</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Use Tool</a>
+    </div>
+  </div>
+</nav>
+
+
 </body>
 </html>
