Restore missing content in static HTML pages
- Restore main content sections in about.html (hero, privacy, how it works, apostles model, benefits, CTA)
- Restore main content sections in faq.html (hero, getting started, privacy & security, help)
- Add button styles for proper rendering
- Fix root cause: pages had navigation but were missing all main content

--- a/public/about.html
+++ b/public/about.html
@@ -422,6 +422,36 @@ html {
             font-weight: 600;
         }
 
+        .btn {
+            display: inline-block;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.375rem;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.2s;
+            border: none;
+            cursor: pointer;
+        }
+
+        .btn-primary {
+            background: #3a863e;
+            color: white;
+        }
+
+        .btn-primary:hover {
+            background: #2d6b31;
+        }
+
+        .btn-secondary {
+            background: white;
+            color: #3a863e;
+            border: 2px solid #3a863e;
+        }
+
+        .btn-secondary:hover {
+            background: #f8f9fa;
+        }
+
         @media (max-width: 768px) {
             .hero-actions {
                 flex-direction: column;
@@ -456,6 +486,138 @@ html {
   </div>
 </nav>
 
+
+    <!-- Main Content -->
+    <main class="about-page">
+        <div class="app-content">
+            <!-- Hero Section -->
+            <section class="section hero-section">
+                <h1>Privacy-First Customer Segmentation</h1>
+                <p class="hero-subtitle">
+                    Analyse your customer satisfaction and loyalty with Segmentor.app. 
+                    Starts with the proven Apostles Model visualization, then provides powerful analytics and insights. Complete privacy protection.
+                </p>
+                <div class="hero-actions">
+                    <a href="/tool/" class="btn btn-primary">Try It Free</a>
+                    <a href="/faq.html" class="btn btn-secondary">Learn More</a>
+                </div>
+            </section>
+
+            <!-- Privacy Promise -->
+            <section class="section">
+                <h2>🔒 Your Data. Your Device. Your Privacy.</h2>
+                <div class="privacy-features">
+                    <div class="privacy-feature">
+                        <h3>✅ No Cookies</h3>
+                        <p>We don't use cookies or any tracking technology.</p>
+                    </div>
+                    <div class="privacy-feature">
+                        <h3>✅ No Cloud Storage</h3>
+                        <p>Your data never leaves your computer. All processing happens locally.</p>
+                    </div>
+                    <div class="privacy-feature">
+                        <h3>✅ No Tracking</h3>
+                        <p>We don't collect, store, or transmit any personal information.</p>
+                    </div>
+                    <div class="privacy-feature">
+                        <h3>✅ 100% Local Processing</h3>
+                        <p>All analysis happens in your browser. We never see your data.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- How It Works -->
+            <section class="section">
+                <h2>How It Works</h2>
+                <div class="steps">
+                    <div class="step">
+                        <div class="step-number">1</div>
+                        <h3>Upload Your Data</h3>
+                        <p>Upload a CSV file with customer satisfaction and loyalty scores, or try with sample data to explore the tool.</p>
+                    </div>
+                    <div class="step">
+                        <div class="step-number">2</div>
+                        <h3>Automatic Segmentation</h3>
+                        <p>See your customers automatically segmented into Apostles, Loyalists, Defectors, and Terrorists using the Apostles Model visualization, then explore powerful analytics and insights.</p>
+                    </div>
+                    <div class="step">
+                        <div class="step-number">3</div>
+                        <h3>Analyse & Export</h3>
+                        <p>Explore your data with interactive filters, save your work as a .seg project file, and export reports.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Apostles Model Framework Explanation -->
+            <section class="section">
+                <h2>What is the Apostles Model?</h2>
+                <p>The Apostles Model is a customer segmentation framework that analyses customers based on two key dimensions:</p>
+                <ul>
+                    <li><strong>Satisfaction:</strong> How happy customers are with your products or services</li>
+                    <li><strong>Loyalty:</strong> How likely they are to continue doing business with you</li>
+                </ul>
+                <p>This creates four distinct customer segments:</p>
+                <div class="segments">
+                    <div class="segment">
+                        <h4>👑 Apostles</h4>
+                        <p>Highly satisfied and highly loyal. Your best customers who love your products and stick with you.</p>
+                    </div>
+                    <div class="segment">
+                        <h4>⭐ Loyalists</h4>
+                        <p>Moderately satisfied but highly loyal. They stick with you but there's room for improvement.</p>
+                    </div>
+                    <div class="segment">
+                        <h4>⚠️ Defectors</h4>
+                        <p>Loyal but not satisfied. They stick with you but aren't happy - they might leave soon.</p>
+                    </div>
+                    <div class="segment">
+                        <h4>🚨 Terrorists</h4>
+                        <p>Neither satisfied nor loyal. These customers might spread negative word-of-mouth.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Benefits -->
+            <section class="section">
+                <h2>Why Choose Segmentor?</h2>
+                <div class="benefits-grid">
+                    <div class="benefit">
+                        <h3>🔒 Privacy-First</h3>
+                        <p>Your sensitive customer data never leaves your device. Complete privacy protection.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>⚡ Instant Results</h3>
+                        <p>Get customer insights in seconds, not weeks. No complex setup required.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>📊 Proven Methodology</h3>
+                        <p>Starts with the well-established Apostles Model used by leading companies worldwide, then provides powerful analytics beyond the basic visualization.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>💾 Save Your Work</h3>
+                        <p>Export your analysis as .seg project files to continue your work later.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>🎯 Actionable Insights</h3>
+                        <p>Identify which customers to focus on and which ones need immediate attention.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>🆓 Free to Use</h3>
+                        <p>No registration, no payment, no strings attached. Just upload and analyse.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- CTA Section -->
+            <section class="section">
+                <div style="text-align: center;">
+                    <h2>Ready to Segment Your Customers?</h2>
+                    <p>Start analysing your customer data with complete privacy protection.</p>
+                    <a href="/tool/" class="btn btn-primary">Launch Tool</a>
+                </div>
+            </section>
+        </div>
+    </main>
 
     <!-- Mode Toggle JavaScript -->
     <script>
