--- a/public/faq.html
+++ b/public/faq.html
@@ -511,5 +511,70 @@
 </nav>
 
 
+    <!-- Main Content -->
+    <main class="faq-page">
+        <div class="app-content">
+            <!-- Hero Section -->
+            <section class="section hero-section">
+                <h1>Frequently Asked Questions</h1>
+                <p class="hero-subtitle">
+                    Find answers to common questions about segmentor.app and the customer segmentation tool. 
+                    Can't find what you're looking for? <a href="/contact.html">Contact us</a>.
+                </p>
+            </section>
+
+            <!-- FAQ Content -->
+            <section class="section">
+                <h2>Getting Started</h2>
+                <div style="margin-bottom: 2rem;">
+                    <h3>How do I get started with segmentor.app?</h3>
+                    <p>Getting started is simple:</p>
+                    <ol>
+                        <li>Visit the <a href="/tool/">main tool page</a></li>
+                        <li>Upload a CSV file with your customer data, or try the sample data to explore</li>
+                        <li>View your customers automatically segmented into the four quadrants</li>
+                        <li>Use filters and analysis tools to gain insights</li>
+                    </ol>
+                    <p>No registration required - just upload and start analyzing!</p>
+                </div>
+
+                <div style="margin-bottom: 2rem;">
+                    <h3>What data do I need to upload?</h3>
+                    <p>You need a CSV file with at least these columns:</p>
+                    <ul>
+                        <li><strong>Customer Name/ID:</strong> Unique identifier for each customer</li>
+                        <li><strong>Satisfaction Score:</strong> How satisfied they are (1-5, 1-7, or 1-10 scale)</li>
+                        <li><strong>Loyalty Score:</strong> How likely they are to stay (1-5, 1-7, or 1-10 scale)</li>
+                    </ul>
+                    <p>Optional columns: Email, Date, Country, Language, or any other customer attributes you want to analyze.</p>
+                </div>
+            </section>
+
+            <section class="section">
+                <h2>Privacy & Security</h2>
+                <div style="margin-bottom: 2rem;">
+                    <h3>Is my data safe?</h3>
+                    <p><strong>Yes, absolutely.</strong> Your data never leaves your device. Segmentor.app runs entirely in your browser using local processing—we never see, store, or transmit your customer data anywhere.</p>
+                    <p>Think of it like using a calculator: the numbers you enter stay on your device. We don't have servers collecting your information because there's nothing to collect. Your customer data remains 100% private and under your control.</p>
+                </div>
+
+                <div style="margin-bottom: 2rem;">
+                    <h3>Do you use cookies?</h3>
+                    <p><strong>No, we don't use cookies.</strong> Segmentor.app doesn't track you, create user profiles, or store any browsing data.</p>
+                    <p>We respect your privacy by design. Since the tool runs entirely in your browser without requiring accounts or logins, there's no need for cookies. We don't collect analytics, track your behavior, or sell your information to third parties.</p>
+                </div>
+            </section>
+
+            <section class="section">
+                <h2>Still Need Help?</h2>
+                <p>Can't find the answer you're looking for? We're here to help.</p>
+                <div class="hero-actions" style="margin-top: 1rem;">
+                    <a href="/contact.html" class="btn btn-primary">Contact Support</a>
+                    <a href="/tool/" class="btn btn-secondary">Try the Tool</a>
+                </div>
+            </section>
+        </div>
+    </main>
+
 </body>
 </html>
